lexion_lang/tests/snapshots/x86_smoke__x86_smoke_extern_call.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86(\"backend/x86_extern_call.lex\")"
---
.intel_syntax noprefix
.text
.extern imported
.global main
main:
# fn main() -> i32 {
  push rbp
  mov rbp, rsp
#     return imported(1);
  mov eax, 1
  push rax
  pop rdi
  call imported
  pop rbp
  ret
