lexion_lang/tests/snapshots/x86_smoke__x86_smoke_function_value_dereference_store_preserves_rax_callback.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86_with_registers(\"backend/x86_function_value_dereference_store.lex\",\nvec![Register::RAX],)"
snapshot_kind: text
---
.intel_syntax noprefix
.text
.global add_one
add_one:
# fn add_one(value: i32) -> i32 {
  push rbp
  mov rbp, rsp
  sub rsp, 16
#     return value + 1;
  add eax, 1
  mov DWORD PTR [rbp-8], eax
  mov eax, DWORD PTR [rbp-8]
  add rsp, 16
  pop rbp
  ret
.global pick
pick:
# fn pick() -> fn(i32) -> i32 {
  push rbp
  mov rbp, rsp
#     return add_one;
  lea rax, [add_one]
  pop rbp
  ret
.global main
main:
# fn main() -> i32 {
  push rbp
  mov rbp, rsp
  sub rsp, 48
#     let handler = add_one;
  lea rax, [add_one]
  mov QWORD PTR [rbp-32], rax
#     let handler_ref = &handler;
  lea rax, [rbp-32]
  mov QWORD PTR [rbp-24], rax
  mov rax, QWORD PTR [rbp-24]
  mov QWORD PTR [rbp-40], rax
#     *handler_ref = pick();
  call pick
  mov rcx, rax
  mov rax, QWORD PTR [rbp-40]
  mov QWORD PTR [rax], rcx
#     return handler(4);
  push rax
  mov rax, QWORD PTR [rbp-32]
  xchg QWORD PTR [rsp], rax
  mov eax, 4
  push rax
  pop rdi
  sub rsp, 8
  call QWORD PTR [rsp+8]
  add rsp, 8
  add rsp, 8
  add rsp, 48
  pop rbp
  ret
