lexion_lang/tests/snapshots/x86_smoke__x86_smoke_function_value_members.snap
---
source: lexion_lang/tests/x86_smoke.rs
expression: "compile_x86(\"backend/x86_function_value_members.lex\")"
snapshot_kind: text
---
.intel_syntax noprefix
.text
.global add_one
add_one:
# fn add_one(value: i32) -> i32 {
  push rbp
  mov rbp, rsp
#     return value + 1;
  mov eax, edi
  add eax, 1
  pop rbp
  ret
.global main
main:
# fn main() -> i32 {
  push rbp
  mov rbp, rsp
  push rbx
  sub rsp, 16
#     let holder = Holder { handler: add_one };
  lea rax, [add_one]
  mov QWORD PTR [rbp-16], rax
  mov eax, DWORD PTR [rbp-16]
  mov DWORD PTR [rbp-24], eax
  mov eax, DWORD PTR [rbp-16+4]
  mov DWORD PTR [rbp-24+4], eax
#     holder.handler = add_one;
  lea rax, [add_one]
  mov QWORD PTR [rbp-24], rax
#     return holder.handler(4);
  mov rbx, QWORD PTR [rbp-24]
  push rax
  mov rax, rbx
  xchg QWORD PTR [rsp], rax
  mov eax, 4
  push rax
  pop rdi
  call QWORD PTR [rsp]
  add rsp, 8
  add rsp, 16
  pop rbx
  pop rbp
  ret
